// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="wrapper"
  data-checked={false}
>
  <input
    checked={false}
    className="input"
    name="test"
    onClick={[Function]}
    onKeyUp={[Function]}
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="container"
  >
    <svg
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
      <circle
        cx="8"
        cy="8"
        r="6"
      />
    </svg>
  </div>
</div>
`;

exports[`Switch renders a checked variant 1`] = `
<div
  className="wrapper"
  data-checked={true}
>
  <input
    checked={true}
    className="input"
    name="test"
    onClick={[Function]}
    onKeyUp={[Function]}
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="container"
  >
    <svg
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
      <circle
        cx="8"
        cy="8"
        r="6"
      />
    </svg>
  </div>
</div>
`;

exports[`Switch renders a large variant 1`] = `
<div
  className="wrapper"
  data-checked={false}
>
  <input
    checked={false}
    className="input"
    name="test"
    onClick={[Function]}
    onKeyUp={[Function]}
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="large container"
  >
    <svg
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
      <circle
        cx="8"
        cy="8"
        r="6"
      />
    </svg>
  </div>
</div>
`;
